--- a/app/blocks/composite-tab/composite-tab.pug
+++ b/app/blocks/composite-tab/composite-tab.pug
@@ -1,6 +1,6 @@
 mixin composite-tab(data)
   +b.composite-tab&attributes(attributes)
-    +e.checkbox
+    +e.checkbox(data-composite-checkbox)
       +b.LABEL.checkbox_sm-small._notext
         block
     +e.button
