--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -95,6 +95,14 @@
     }
   }
 
+  &_mfz12 {
+    @include screen('sm') {
+      @include text12;
+
+      line-height: (13 / 12);
+    }
+  }
+
   &_bordered {
     border: 1px solid $color-form-border;
 
@@ -108,10 +116,10 @@
   }
 
   &_def-plchldr {
-    padding: 17px 26px;
+    padding: 21px 26px;
 
     @include screen('sm') {
-      padding: 10px 15px;
+      padding: 12px;
     }
 
     &:-ms-input-placeholder {
