--- a/app/blocks/form-panel/form-panel.scss
+++ b/app/blocks/form-panel/form-panel.scss
@@ -94,6 +94,12 @@
     }
   }
 
+  &_sm-pd30 {
+    @include screen('sm') {
+      padding: 14px 30px;
+    }
+  }
+
   &.is-always-fixed {
     position: fixed;
     bottom: 0;
