--- a/app/blocks/tabs/tabs.scss
+++ b/app/blocks/tabs/tabs.scss
@@ -234,6 +234,7 @@
     margin-top: 11px;
 
     @include screen('sm') {
+      margin-top: 12px;
       flex: none;
       width: 100%;
     }
@@ -245,7 +246,12 @@
     width: 100%;
     margin-top: 34px;
 
+    @include screen('lg') {
+      margin-top: 31px;
+    }
+
     @include screen('sm') {
+      margin-top: -5px;
       flex-direction: column;
     }
   }
