--- a/app/blocks/time/time.scss
+++ b/app/blocks/time/time.scss
@@ -5,6 +5,10 @@
   align-items: center;
   width: 100%;
 
+  &_aibsl {
+    align-items: baseline;
+  }
+
   &__text {
     @include text16;
 
@@ -49,7 +53,7 @@
       @include screen('sm') {
         @include text12;
 
-        line-height: (25 / 12);
+        line-height: (15 / 12);
       }
     }
 
@@ -86,7 +90,7 @@
 
       @include screen('sm') {
         width: 16px;
-        height: auto;
+        height: 7px;
         min-width: 16px;
       }
     }
