--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -469,7 +469,7 @@ block content
             +ui-description .js-datepicker2<br> Параметры задаются через дата-атрибуты
             br
             +form-box('Выберите дату', 'calendar3')
-              +input(placeholder="Выберите дату" readonly).js-datepicker2
+              +input(placeholder="Выберите дату" readonly data-disabled-dates="2019-8-2,2019-8-5,2019-8-20,2019-8-14").js-datepicker2
           +col(6)
             +ui-description Поле ввода номера телефона.<br> Маска привязана через атрибут data-tel-code и data-tel-number
             br
