--- a/app/blocks/composite-tab/composite-tab.scss
+++ b/app/blocks/composite-tab/composite-tab.scss
@@ -45,7 +45,13 @@
     @include screen('sm') {
       top: 5px;
       left: auto;
-      right: 4px;
+      right: 3px;
+    }
+  }
+
+  &__box {
+    @include screen('sm') {
+      margin-right: 6px;
     }
   }
 
@@ -80,11 +86,17 @@
     top: 6px;
     right: 4px;
 
+    @include screen('md') {
+      top: 9px;
+      right: 8px;
+    }
+
     @include screen('sm') {
       position: static;
       top: auto;
       right: auto;
       align-self: baseline;
+      margin: 0 9px;
     }
 
     #{$b}.is-saved & {
@@ -125,10 +137,14 @@
     fill: $color-basic;
     display: none;
 
-    #{$b}.is-active & {
+    @include screen('sm') {
+      display: inline-block;
+      margin: 0 10px;
+    }
 
+    #{$b}.is-saved &, #{$b}.is-disabled & {
       @include screen('sm') {
-        display: inline-block;
+        display: none;
       }
     }
   }
@@ -140,7 +156,7 @@
     box-sizing: border-box;
     width: 100%;
 
-    @include screen('sm') {
+    @include screen('md') {
       justify-content: flex-start;
     }
   }
@@ -156,7 +172,17 @@
     transition: box-shadow $ease-main;
     box-shadow: inset 0 -1px 0 $color-border-light;
 
+    @media only screen and (max-width: 1200px) {
+      padding: 25px 20px 10px;
+    }
+
+    @include screen('md') {
+      align-items: flex-start;
+      padding: 37px 11px 8px;
+    }
+
     @include screen('sm') {
+      padding: 25px 9px 5px;
       box-shadow: none;
     }
 
@@ -222,10 +248,6 @@
       @include screen('sm') {
         box-shadow: none;
       }
-    }
-
-    @include screen('sm') {
-      padding: 20px 9px 10px;
     }
 
     #{$b}.is-disabled & {
