--- a/app/blocks/offer-info/offer-info.scss
+++ b/app/blocks/offer-info/offer-info.scss
@@ -56,6 +56,14 @@
       }
     }
 
+    &_mfz15 {
+      @include screen('sm') {
+        @include text15;
+
+        line-height: (13 / 15);
+      }
+    }
+
     &_lsp {
       letter-spacing: .02em;
     }
