--- a/app/components/side-navigation/side-navigation.scss
+++ b/app/components/side-navigation/side-navigation.scss
@@ -22,6 +22,11 @@
     padding-right: 12%;
   }
 
+  @include screen('lg') {
+    min-height: 0;
+    padding-bottom: 40px;
+  }
+
   @include screen('md') {
     position: relative;
     flex-direction: row;
@@ -38,6 +43,10 @@
   &__navigation,&__info {
     &:not(:last-child) {
       margin-bottom: 32px;
+
+      @include screen('lg') {
+        margin-bottom: 50px;
+      }
 
       @include screen('md') {
         margin-bottom: 0;
