add poopus for host t&c page

--- a/app/blocks/box/box.scss
+++ b/app/blocks/box/box.scss
@@ -49,6 +49,18 @@
     }
   }
 
+  &_big2 {
+    min-width: 19px;
+    width: 19px;
+    height: 19px;
+
+    @include screen('sm') {
+      min-width: 11px;
+      width: 11px;
+      height: 11px;
+    }
+  }
+
   &_size9 {
     min-width: 9px;
     width: 9px;
