--- a/app/blocks/offer-info/offer-info.scss
+++ b/app/blocks/offer-info/offer-info.scss
@@ -48,6 +48,16 @@
       line-height: (20 / 16);
     }
 
+    &_fz24 {
+      @include text24;
+
+      @include screen('sm') {
+        @include text15;
+
+        line-height: (13 / 15);
+      }
+    }
+
     &_mfz10 {
       @include screen('sm') {
         @include text10;
