--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -66,6 +66,8 @@ block content
         +link.js-popup-depends-width(href="#" data-source="xl:#popup-invoices,md:#popup-invoices-mobile") Popup invoices
         +link.js-popup-depends-width(href="#" data-source="xl:#popup-invoice,md:#popup-invoice-mobile") Popup One Invoice
         +link(href="#popup-cancellation").js-popup Popup cancel reservation
+        +link.js-popup(href="#popup-reminder-empty") Popup empty terms and conditions
+        +link(href="#popup-reminder-save").js-popup Popup save terms and conditions
 
 block panels
   +main-menu
@@ -100,3 +102,5 @@ block popups
   +popup-invoice#popup-invoice
   +popup-invoice-mobile#popup-invoice-mobile
   +popup-cancellation#popup-cancellation
+  +popup-reminder-empty#popup-reminder-empty
+  +popup-reminder-save#popup-reminder-save
