--- a/app/styles/helpers/_text-styles.scss
+++ b/app/styles/helpers/_text-styles.scss
@@ -60,6 +60,12 @@
   letter-spacing: -.02em;
 }
 
+@mixin text24 {
+  font-size: 24px;
+  line-height: (26 / 24);
+  letter-spacing: -.02em;
+}
+
 @mixin text22 {
   font-size: 22px;
   line-height: (26 / 22);
