--- a/app/blocks/popups/popups.scss
+++ b/app/blocks/popups/popups.scss
@@ -55,6 +55,12 @@
   overflow: visible;
   background-color: $color-white;
 
+  &_sm-full {
+    @include screen('sm') {
+      max-width: none;
+    }
+  }
+
   &_big {
     max-width: 930px;
   }
@@ -84,6 +90,26 @@
 
     @include screen('sm') {
       padding: 18px 20px;
+    }
+
+    &_smpd {
+      padding: 28px 60px 24px 70px;
+
+      @include screen('sm') {
+        padding: 8px 18px;
+      }
+    }
+
+    &_sb {
+      justify-content: space-between;
+    }
+
+    &_sm-col {
+      @include screen('sm') {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-end;
+      }
     }
   }
 
@@ -286,6 +312,14 @@
       }
     }
 
+    &_mfz12 {
+      @include screen('sm') {
+        @include text12;
+
+        line-height: (13 / 12);
+      }
+    }
+
     &_mg28 {
       &:not(:last-child) {
         margin-bottom: 28px;
@@ -351,6 +385,16 @@
       @include screen('sm') {
         opacity: 0;
         pointer-events: none;
+      }
+    }
+
+    #{$b}_sm-cross & {
+      display: none;
+
+      @include screen('sm') {
+        display: block;
+        right: auto;
+        left: 9px;
       }
     }
   }
