--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -132,6 +132,16 @@
       }
     }
 
+    &_mg58 {
+      &:not(:last-of-type) {
+        margin-bottom: 58px;
+
+        @include screen('sm') {
+          margin-bottom: 30px;
+        }
+      }
+    }
+
     &_mg65 {
       &:not(:last-of-type) {
         margin-bottom: 65px;
@@ -1620,6 +1630,27 @@
       &:not(:last-child) {
         margin-right: 20px;
       }
+    }
+  }
+
+  &__note {
+
+    &:first-child {
+      margin-top: -10px;
+
+      @include screen('sm') {
+        margin-top: 0;
+      }
+    }
+
+    &:not(:first-child) {
+      margin-top: 36px;
+    }
+  }
+
+  &__notice {
+    &:not(:first-child) {
+      margin-top: 40px;
     }
   }
 
