--- a/app/blocks/offers/offers.pug
+++ b/app/blocks/offers/offers.pug
@@ -27,4 +27,4 @@ mixin offers-describe()
     +e.column_left
       +e.text There is now Meeting Room offers for this Space yet.
     +e.column_right
-      +button('a')(href="#popup-add-rental-offer")._short._border.__button.js-popup Add Meeting Room offer
+      +button('a')(href="#popup-add-offer-tc")._short._border.__button.js-popup Add Meeting Room offer
