--- a/app/blocks/sidebar/sidebar.pug
+++ b/app/blocks/sidebar/sidebar.pug
@@ -1,3 +1,7 @@
 mixin sidebar()
   +b.ASIDE.js-sticky-block.sidebar__&attributes(attributes)
     block
+
+mixin sidebar-nosticky()
+  +b.ASIDE.sidebar__&attributes(attributes)
+    block
