--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -68,6 +68,7 @@ block content
         +link(href="#popup-cancellation").js-popup Popup cancel reservation
         +link.js-popup(href="#popup-reminder-empty") Popup empty terms and conditions
         +link(href="#popup-reminder-save").js-popup Popup save terms and conditions
+        +link(href="#popup-add-offer-tc").js-popup Popup Add rental offer with terms and conditins for one offer
 
 block panels
   +main-menu
@@ -104,3 +105,4 @@ block popups
   +popup-cancellation#popup-cancellation
   +popup-reminder-empty#popup-reminder-empty
   +popup-reminder-save#popup-reminder-save
+  +popup-add-offer-tc#popup-add-offer-tc
