--- a/app/pages/signup/signup.pug
+++ b/app/pages/signup/signup.pug
@@ -8,7 +8,7 @@ block content
     .container
       +grid.grid_layout.grid_content
         +col({ xl: 3, lg: 12})
-          +sidebar._no-bg(data-unstick-media="lg")
+          +sidebar-nosticky._no-bg
             +page-title._small.__title Choose an option:
             +e.toggles
               +form-toggle({radio: {checked: true, name: "userType", value: "tenant", show: "socials", hide: ""}, arrow: true, subtitle: "To rent Spaces Sign up as", title: "Tenant", describe: "Register as a Tenant to&nbsp;get opportunity to rent Hot and Fixed desks, Meeting Rooms and Office Spaces."}).__toggle
@@ -54,9 +54,9 @@ block content
               +grid.grid_big.grid_int59
                 +col({xl: 6, md:12 })
                   +form-section-wrapper._mg22._shiftl
-                    +checkbox('agreement', '1') I agree with Terms and Conditions
+                    +checkbox('agreement', '1', true, true) I agree with Terms and Conditions
                   +form-section-wrapper._mg22._shiftl
-                    +checkbox('subscribe', '1') Sign me up to Space Pool notification via E-mail
+                    +checkbox('subscribe', '1', true) Sign me up to Space Pool notification via E-mail
                 +col({xl: 6, md:12 })
                   +form-section-wrapper._fxe._h100p._pb
                     +button('button')(type="submit")._wide._short Sign up
