terms and conditions

--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -1204,6 +1204,14 @@
     }
   }
 
+  &_pb3 {
+    padding-bottom: 80px;
+
+    @include screen('sm') {
+      padding-bottom: 0;
+    }
+  }
+
   &_negative-mg {
     margin-top: -8px;
 
@@ -1521,6 +1529,9 @@
     }
 
     &-bottom {
+      position: absolute;
+      bottom: 0;
+      left: 0;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -1531,7 +1542,6 @@
       padding: 5px 53px;
 
       @include screen('sm') {
-        position: absolute;
         bottom: 50px;
         left: 0;
         height: 70px;
